# treefeeder

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yaml  publish.yaml  release.yaml  test.yaml
treefeeder/: __init__.py  cli.py  contents.py  parser.py  printer.py  tree.py
